// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchListItem should render address type verblijfsobject 1`] = `
<li>
  <Connect(Link)
    className="o-btn o-btn--link qa-list-item-link"
    to={Object {}}
  >
    label
  </Connect(Link)>
  <span
    className="qa-search-results__link-extra-info"
  >
     (nevenadres) (verblijfsobject gevormd)
  </span>
</li>
`;

exports[`SearchListItem should render monument type complex 1`] = `
<li>
  <Connect(Link)
    className="o-btn o-btn--link qa-list-item-link"
    to={Object {}}
  >
    label
  </Connect(Link)>
  <span
    className="qa-search-results__link-extra-info"
  />
  <span
    className="qa-subtype"
  >
     (
    complex
    )
  </span>
</li>
`;

exports[`SearchListItem should render openbareruimte type water 1`] = `
<li>
  <Connect(Link)
    className="o-btn o-btn--link qa-list-item-link"
    to={Object {}}
  >
    label
  </Connect(Link)>
  <span
    className="qa-search-results__link-extra-info"
  />
  <span
    className="qa-subtype"
  >
     (
    water
    )
  </span>
</li>
`;

exports[`SearchListItem should render straatnamen type weg 1`] = `
<li>
  <Connect(Link)
    className="o-btn o-btn--link qa-list-item-link"
    to={Object {}}
  >
    label
  </Connect(Link)>
  <span
    className="qa-search-results__link-extra-info"
  />
</li>
`;
